syntax = "proto3";
option go_package = "ITU/grpc/proto";

message BidRequest {
    string clientID = 1;
    int64 amount = 2;
}

message ResultRequest {
    string clientID = 1;
}

message BidResponse {
    string ack = 1; // "success", "fail", or "exception"
}

message ResultResponse {
    string status = 1; // "ongoing" or "finished"
    string winner = 2;
    int64 highestBid = 3;
    bool isAuctionOver = 4;
}

message ReplicationRequest {
    string operation = 1; // "bid" or "state"
    string clientID = 2;
    int64 amount = 3;
    int64 highestBid = 4;
    string winner = 5;
    bool isAuctionOver = 6;
}

message ReplicationResponse {
    bool success = 1;
}

service AuctionService {
    rpc Bid(BidRequest) returns (BidResponse);
    rpc Result(ResultRequest) returns (ResultResponse);
    rpc Replicate(ReplicationRequest) returns (ReplicationResponse);
}
// export PATH="$PATH:$(go env GOPATH)/bin"
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/proto.proto